<resources>
    <string name="app_name">RobotController</string>
    <string name="title_activity_joystick">joystick</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="date">date</string>
    <string name="fbdl_command">Fbdl command</string>
    <string name="delete">Delete</string>
    <string name="name">Name</string>
    <string name="current">Current</string>
    <string name="set_as_default">Set as default</string>
    <string name="btnEdit">Edit</string>
    <string name="please_write_fbdl_command">Please, write fbdl command</string>
    <string name="please_give_it_a_name">Please, give it a name</string>
    <string name="edit_command_name_text">Name</string>
    <string name="add_FbdlCommandText">Add FBDL command</string>
    <string name="done_button_text">Done</string>
    <string name="edit_btnDone">Done</string>
    <string name="edit_btnDelete">Delete</string>
    <string name="edit_FbdlCommandText">Edit FBDL command</string>
    <string name="add_btnDone">Add</string>
    <string name="is_default">Default</string>
    <string name="zero_percent">0%</string>
    <string name="x050_x050">x050:x050</string>
    <string name="zero_angle">0°</string>
    <string name="joystick">Joystick</string>
    <string name="fbdl">FBDL</string>
    <string name="bluetoothSettings">Bluetooth settings</string>
    <string name="bluetooth_is_not_available">Bluetooth is not available</string>
    <string name="bluetooth_is_available">Bluetooth is available</string>
    <string name="bluetooth_icon">Bluetooth icon</string>
    <string name="bluetooth_is_turning_on">Bluetooth is turning on</string>
    <string name="bluetooth_is_turning_off">Blutooth is turning off</string>
    <string name="pairedDevices">Paired devices:</string>
    <string name="refresh_devices">Refresh paired devices list</string>
    <string name="btDeviceAddress">Bluetooth device\'s address</string>
    <string name="btDeviceName">Device name</string>
    <string name="PairedDevices">Paired devices</string>
    <string name="rulebase_universe_name">Selected rulebase universe</string>
    <string name="handle_universe">Handle Universe</string>
    <string name="handle_rules">Handle Rules</string>
    <string name="zero">0</string>
    <string name="send">Send</string>
    <string name="receive">Receive</string>
    <string name="universe_name">Universe name</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="delete_item">Delete</string>
    <string name="add_item">Add</string>
    <string name="edit_universe_title">Edit universe</string>
    <string name="cancel_button_text">Cancel</string>
    <string name="create_universe">Create universe</string>
    <string name="cancel">Cancel</string>
    <string name="btnCancel">Cancel</string>
    <string name="btnDone">Done</string>
    <string name="handle_universe_parameters">Handle universe parameters</string>
    <string name="limit_min_value">Min value:</string>
    <string name="limit_max_value">Max value:</string>
    <string name="min_value">Min. value</string>
    <string name="max_value">Max. value</string>
    <string name="create_limit">Create limit</string>
    <string name="limit_name">Limit name</string>
    <string name="create_rule">Create rule</string>
    <string name="rule_name">Rule name</string>
    <string name="when">when</string>
    <string name="is">is</string>
    <string name="antecedentLimitName">Atecedent limit</string>
    <string name="antecedentUniverseName">Antecedent universe</string>
    <string name="rule_base_label">Rule base: </string>
    <string name="send_universe">Send universe</string>
    <string name="send_rules">Send Rules</string>
    <string name="send_fbdl">Send FBDL</string>
    <string name="please_write_fbdl_description">Please, write some description</string>
</resources>