<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".limit.fragments.EditLimitFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/edit_limit_fragment_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_limit"
            android:textSize="24sp"
            android:textAlignment="center"/>

        <EditText
            android:id="@+id/editLimitMinValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/min_value" />

        <EditText
            android:id="@+id/editLimitMaxValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/max_value" />

        <Spinner
            android:id="@+id/editSelectUniverseSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_cancel_edit_limit_fragment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnCancel"/>

            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:id="@+id/btn_done_edit_limit_fragment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnDone"/>

        </LinearLayout>

    </LinearLayout>

</FrameLayout>