<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".universe.fragments.EditUniverseFragment"
    android:padding="20dp">

    <TextView
        android:id="@+id/edit_universe_fragment_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_universe"
        android:textSize="36sp"
        android:layout_margin="10dp"
        android:textAlignment="center"/>

    <EditText
        android:id="@+id/edit_universe_name_fragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/universe_name"
        android:textSize="24sp"
        android:layout_margin="10dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp">
        <Button
            android:id="@+id/btn_cancel_edit_universe_fragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnCancel"/>

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Button
            android:id="@+id/btn_done_edit_universe_fragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnDone"/>
    </LinearLayout>
</LinearLayout>
