<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".universe.fragments.EditUniverseFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/edit_universe_fragment_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_universe"
            android:textSize="24sp"
            android:textAlignment="center"/>

        <EditText
            android:id="@+id/edit_universe_name_fragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/universe_name" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btn_cancel_edit_universe_fragment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnCancel"/>

            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:id="@+id/btn_done_edit_universe_fragment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnDone"/>
        </LinearLayout>
    </LinearLayout>


</FrameLayout>