<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:id="@+id/ruleListItemCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        card_view:cardBackgroundColor="#FAFAFA">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/deletableListItem"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="10dp">
            </CheckBox>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/ruleListItemName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rule_name"
                    android:textSize="36sp"
                    android:layout_marginEnd="10dp"
                    />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:labelFor="@+id/baseUniverseListItemName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/rule_base_label"
                        android:layout_marginEnd="10dp"/>

                    <TextView
                        android:id="@+id/baseUniverseListItemName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/universe_name"
                        android:textSize="18sp"
                        android:layout_marginEnd="10dp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            android:id="@+id/baseLimitNameListItem"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/limit_name"
                            android:textSize="18sp"
                            android:layout_marginEnd="10dp" />

                        <TextView
                            android:id="@+id/when"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/when"
                            android:textSize="18sp"
                            android:layout_marginEnd="10dp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            android:id="@+id/antecedentUniverseListItemName"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/antecedentUniverseName"
                            android:textSize="18sp"
                            android:layout_marginEnd="10dp"
                            />

                        <TextView
                            android:id="@+id/is"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/is"
                            android:textSize="18sp"
                            android:layout_marginEnd="10dp" />

                        <TextView
                            android:id="@+id/antecedentLimitListItemName"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/antecedentLimitName"
                            android:textSize="18sp" />
                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>





    </androidx.cardview.widget.CardView>

</layout>