<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".rule.fragments.EditRuleFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:id="@+id/edit_rule_fragment_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_rule"
            android:textSize="36sp"
            android:textAlignment="center"
            android:layout_margin="10dp"/>

        <EditText
            android:id="@+id/editRuleName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/rule_name" />

        <Spinner
            android:id="@+id/editSelectBaseUniverseSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp" />

        <Spinner
            android:id="@+id/editSelectBaseLimitSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp" />

        <Spinner
            android:id="@+id/editSelectAntecedentUniverseSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp" />

        <Spinner
            android:id="@+id/editSelectAntecedentLimitSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="10dp">

            <Button
                android:id="@+id/btn_cancel_edit_rule_fragment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnCancel"/>

            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:id="@+id/btn_done_edit_rule_fragment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnDone"/>

        </LinearLayout>
    </LinearLayout>

</FrameLayout>