<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

    android:fitsSystemWindows="true"

    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageBluetoothStatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_bluetooth_disabled"
        android:minWidth="100dp"
        android:maxWidth="150dp"
        android:minHeight="150dp"
        android:maxHeight="200dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:contentDescription="@string/bluetooth_icon">
    </ImageView>

    <TextView
        android:id="@+id/bluetoothStatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bluetooth_is_not_available"
        android:textAlignment="center"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp">
    </TextView>

    <TextView
        android:id="@+id/pairedDeviceHeaderText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pairedDevices"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp">
    </TextView>

    <ListView
        android:id="@+id/pairedDeviceList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"/>

</LinearLayout>