<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:id="@+id/limitListItemCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        card_view:cardBackgroundColor="#FAFAFA">

        <LinearLayout
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/deletableListItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp">
            </CheckBox>

            <TextView
                android:id="@+id/limitMinValueListItemLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/limit_min_value"
                android:textSize="18sp"
                android:labelFor="@+id/limitMinValueListItem"/>

            <TextView
                android:id="@+id/limitMinValueListItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zero"
                android:textSize="18sp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"/>

            <TextView
                android:id="@+id/limitMaxValueListItemLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/limit_max_value"
                android:labelFor="@+id/limitMaxValueListItem"
                android:layout_marginRight="10dp"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/limitMaxValueListItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zero"
                android:textSize="18sp" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</layout>